src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Livesport Customer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Responded</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AutoClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the given Case record has been auto-closed after x many days by Case management automations.</description>
        <label>Auto Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Action_Reason__c</fullName>
        <description>List of Case Action Reasons. Dependent on Case Actions list.</description>
        <label>Case Action Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Actions__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed - Case Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed - New Question</fullName>
                </value>
                <value>
                    <fullName>Closed - Spam</fullName>
                </value>
                <value>
                    <fullName>Closed - Irate Customer</fullName>
                </value>
                <value>
                    <fullName>BTQ - Shift End</fullName>
                </value>
                <value>
                    <fullName>BTQ - Assign to Another Agent</fullName>
                </value>
                <value>
                    <fullName>BTQ - Accidentally Closed</fullName>
                </value>
                <value>
                    <fullName>Billing - Manual Refund Request</fullName>
                </value>
                <value>
                    <fullName>Billing - Billing Batch</fullName>
                </value>
                <value>
                    <fullName>Billing - Manual Cancellation</fullName>
                </value>
                <value>
                    <fullName>Billing - Invoice Request</fullName>
                </value>
                <value>
                    <fullName>Billing - Manual Pause Resume</fullName>
                </value>
                <value>
                    <fullName>Tech - Escalation to THD</fullName>
                </value>
                <value>
                    <fullName>On-Hold - Viewing History</fullName>
                </value>
                <value>
                    <fullName>On-Hold - Manual Free Month Addition</fullName>
                </value>
                <value>
                    <fullName>Split Case - New Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Actions__c</fullName>
        <description>List of Case Actions. Dependent on case status.</description>
        <label>Case Actions</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Back to Queue</fullName>
                </value>
                <value>
                    <fullName>Billing Escalation</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Split Case</fullName>
                </value>
                <value>
                    <fullName>Tech Escalation</fullName>
                </value>
                <value>
                    <fullName>On-Hold Escalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Churn_Save_Attempted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Churn Save Attempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <description>Field for getting proper Community URL for Email Template.</description>
        <formula>CASE( $CustomMetadata.Org_Configuration__mdt.Main_Config.Environment_Type__c ,
&quot;DEV&quot;,  $CustomMetadata.DAZN_Configuration__mdt.DEV.Community_URL__c , 
&quot;TEST&quot;, $CustomMetadata.DAZN_Configuration__mdt.TEST.Community_URL__c,
&quot;STAG&quot;,  $CustomMetadata.DAZN_Configuration__mdt.STAG.Community_URL__c , 
&quot;PROD&quot;,  $CustomMetadata.DAZN_Configuration__mdt.PROD.Community_URL__c, $CustomMetadata.DAZN_Configuration__mdt.PROD.Community_URL__c)</formula>
        <label>Community URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Email__c</fullName>
        <description>Email used to send notifications. It should be either Contact Email or Web Email</description>
        <label>Contact Us Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <label>Correlation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Non authenticated customer name</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>This field is created to capture error code from the description field</description>
        <label>Error Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Owner__c</fullName>
        <formula>IF($User.Id = OwnerId , True, False)</formula>
        <label>Is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment__c</fullName>
        <label>Last Case Comment</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mass_Response__c</fullName>
        <label>Mass Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GAMBA KOFU game error</fullName>
                    <label>GAMBA, EHIME</label>
                </value>
                <value>
                    <fullName>J2 CATCH UP</fullName>
                </value>
                <value>
                    <fullName>Buffering, quality issue</fullName>
                </value>
                <value>
                    <fullName>Issue Compensation</fullName>
                </value>
                <value>
                    <fullName>CA Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Case_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Case Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Country_Code_Origin__c</fullName>
        <label>Notification Country Code Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Country_Code__c</fullName>
        <description>this field contains an ISO 3166-1 alpha-2 code, which is a two-letter country code defined in ISO 3166-1, part of the ISO 3166 standard</description>
        <label>Notification Country Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Language_Code_Origin__c</fullName>
        <label>Notification Language Code Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Language_Code__c</fullName>
        <description>This field contains a language tag, adhering the best practices as described in rfc5646</description>
        <label>Notification Language Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Key__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0-New Case, 1 - OnHold, 2- Tech, 3 - Billing</description>
        <label>Queue Key</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_New__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Close_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Close Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE(CASE( Status ,&apos;New&apos;,&apos;/resource/status_icons/status-new.png&apos;,&apos;Open&apos;,&apos;/resource/status_icons/status-open.png&apos;,&apos;Pending&apos;,&apos;/resource/status_icons/status-pending.png&apos;,&apos;Escalated&apos;, &apos;/resource/status_icons/status-escalated.png&apos;,&apos;Closed&apos;,&apos;/resource/status_icons/status-closed.png&apos;,&apos;&apos;),&apos;&apos;,22,22) + &apos; &apos; + Text(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type2__c</fullName>
        <label>Sub-Type2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>How do I amend my order?</fullName>
                </value>
                <value>
                    <fullName>How do I access the &quot;My Account&quot; area?</fullName>
                </value>
                <value>
                    <fullName>Help with Error codes</fullName>
                </value>
                <value>
                    <fullName>How do I cancel my subscription?</fullName>
                </value>
                <value>
                    <fullName>How do I change my marketing preferences?</fullName>
                </value>
                <value>
                    <fullName>How do I change my password?</fullName>
                </value>
                <value>
                    <fullName>How do I change my payment method?</fullName>
                </value>
                <value>
                    <fullName>How do I change my personal details?</fullName>
                </value>
                <value>
                    <fullName>How do I change or update my payment method?</fullName>
                </value>
                <value>
                    <fullName>How do I install my DAZN TV device?</fullName>
                </value>
                <value>
                    <fullName>How do I order a new DAZN TV device</fullName>
                </value>
                <value>
                    <fullName>How do I sign in to DAZN for Business?</fullName>
                </value>
                <value>
                    <fullName>How do I sign up to DAZN for Business?</fullName>
                </value>
                <value>
                    <fullName>How do I track my order?</fullName>
                </value>
                <value>
                    <fullName>How do I use the DAZN TV device?</fullName>
                </value>
                <value>
                    <fullName>How do I view my bill?</fullName>
                </value>
                <value>
                    <fullName>I can&apos;t find the content I want to view</fullName>
                </value>
                <value>
                    <fullName>I can&apos;t pair my remote</fullName>
                </value>
                <value>
                    <fullName>I cannot sign in to DAZN for Business</fullName>
                </value>
                <value>
                    <fullName>I cannot sign in to the &quot;My Account&quot; area</fullName>
                </value>
                <value>
                    <fullName>I did not receive a password reset email</fullName>
                </value>
                <value>
                    <fullName>I forgot my email</fullName>
                </value>
                <value>
                    <fullName>I forgot my password</fullName>
                </value>
                <value>
                    <fullName>I have a blank screen</fullName>
                </value>
                <value>
                    <fullName>I have no audio</fullName>
                </value>
                <value>
                    <fullName>I have problems with my delivery</fullName>
                </value>
                <value>
                    <fullName>I was incorrectly charged</fullName>
                </value>
                <value>
                    <fullName>I&apos;m unable to sign up</fullName>
                </value>
                <value>
                    <fullName>I&apos;ve lost my remote</fullName>
                </value>
                <value>
                    <fullName>My DAZN App Doesn&apos;t Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Case sub-types, this field is dependent on case type field.</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>About DAZN for Business</fullName>
                </value>
                <value>
                    <fullName>STB Delivery &amp; installation</fullName>
                </value>
                <value>
                    <fullName>Creating a new account</fullName>
                </value>
                <value>
                    <fullName>Username and Password</fullName>
                </value>
                <value>
                    <fullName>Update my details</fullName>
                </value>
                <value>
                    <fullName>Remote Control Issues</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Problems Watching</fullName>
                </value>
                <value>
                    <fullName>DAZN TV device issues</fullName>
                </value>
                <value>
                    <fullName>My Account</fullName>
                </value>
                <value>
                    <fullName>Abandoned Chat</fullName>
                </value>
                <value>
                    <fullName>Unable to classify</fullName>
                </value>
                <value>
                    <fullName>Missed Chat</fullName>
                </value>
                <value>
                    <fullName>About DAZN</fullName>
                    <isActive>false</isActive>
                    <label>About DAZN</label>
                </value>
                <value>
                    <fullName>Access to My Account</fullName>
                    <isActive>false</isActive>
                    <label>Access to My Account</label>
                </value>
                <value>
                    <fullName>Account Reactivation through SNL</fullName>
                    <isActive>false</isActive>
                    <label>Account Reactivation through SNL</label>
                </value>
                <value>
                    <fullName>Age Verification</fullName>
                    <isActive>false</isActive>
                    <label>Age Verification</label>
                </value>
                <value>
                    <fullName>App Feedback</fullName>
                    <isActive>false</isActive>
                    <label>App Feedback</label>
                </value>
                <value>
                    <fullName>App Installation &amp; Use</fullName>
                    <isActive>false</isActive>
                    <label>App Installation &amp; Use</label>
                </value>
                <value>
                    <fullName>App Issues</fullName>
                    <isActive>false</isActive>
                    <label>App Issues</label>
                </value>
                <value>
                    <fullName>App features</fullName>
                    <isActive>false</isActive>
                    <label>App features</label>
                </value>
                <value>
                    <fullName>BILDplus</fullName>
                    <isActive>false</isActive>
                    <label>BILDplus</label>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                    <isActive>false</isActive>
                    <label>Cancellation</label>
                </value>
                <value>
                    <fullName>Cancellation reasons</fullName>
                    <isActive>false</isActive>
                    <label>Cancellation reasons</label>
                </value>
                <value>
                    <fullName>Cancelling my account</fullName>
                    <isActive>false</isActive>
                    <label>Cancelling my account</label>
                </value>
                <value>
                    <fullName>Casting to another device</fullName>
                    <isActive>false</isActive>
                    <label>Casting to another device</label>
                </value>
                <value>
                    <fullName>Changing my subscription type</fullName>
                    <isActive>false</isActive>
                    <label>Changing my subscription type</label>
                </value>
                <value>
                    <fullName>Comment about marketing or adverts</fullName>
                    <isActive>false</isActive>
                    <label>Comment about marketing or adverts</label>
                </value>
                <value>
                    <fullName>Content Feedback</fullName>
                    <isActive>false</isActive>
                    <label>Content Feedback</label>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                    <isActive>false</isActive>
                    <label>Customer Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_Payments_Billing_DACH_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Account, Payments &amp; Billing DACH queue</label>
        <queue>Account_Payments_Billing_DACH_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Payments_Billing_JP_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Account, Payments &amp; Billing JP queue</label>
        <queue>Account_Payments_Billing_JP_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>Status__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>Status__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>greaterOrEqual</operation>
            <value>01/01/2022</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Billing_Cases_DACH_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Cases DACH</label>
        <queue>Billing_Cases_DACH</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Billing_Cases_JP_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Cases JP</label>
        <queue>Billing_Cases_JP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Regional_Manager_DACH_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CS Regional Manager DACH</label>
        <queue>CS_Regional_Manager_DACH</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Regional_Manager_JP_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CS Regional Manager Japan</label>
        <queue>CS_Regional_Manager_JP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Unknown_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Case Unknown</label>
        <queue>Case_Unknown</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Catch_Up_DACH_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Catch Up DACH queue</label>
        <queue>Catch_Up_DACH_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Catch_Up_JP_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Catch Up JP queue</label>
        <queue>Catch_Up_JP_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Exco_Complaint_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Exco Complaint</label>
        <queue>Exco_Complaint</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Enquiry_DACH_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>General Enquiry DACH queue</label>
        <queue>General_Enquiry_DACH_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Enquiry_JP_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>General Enquiry JP queue</label>
        <queue>General_Enquiry_JP_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Head_Of_CS_DACH_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Head Of CS DACH</label>
        <queue>Head_Of_CS_DACH</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Exco_Complaint</fullName>
        <active>true</active>
        <businessProcess>Livesport Customer Support</businessProcess>
        <label>Exco Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Process</fullName>
        <active>true</active>
        <businessProcess>Livesport Customer Support</businessProcess>
        <label>General Process</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Set_Contact_with_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK( AccountId ) ) , ISBLANK( ContactId ) )</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Contact has to be selected if Account was set</errorMessage>
    </validationRules>
</CustomObject>